--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- Hero Section -->
   <section id="home" class="min-h-screen flex flex-col justify-center items-center text-center px-6 pt-20">
     <h1 class="text-4xl md:text-6xl font-bold mb-4">Hi, I'm Aditya Shukla</h1>
-    <p class="text-xl md:text-2xl text-gray-400 max-w-xl">A passionate developer/designer building beautiful, functional web experiences.</p>
+    <p class="text-xl md:text-2xl text-gray-400 max-w-xl">A passionate developer building beautiful, functional web experiences.</p>
     <a href="#projects" class="mt-8 inline-block bg-primary hover:bg-indigo-600 text-white px-6 py-3 rounded-full transition">View My Work</a>
   </section>
 
@@ -53,7 +53,7 @@
   <section id="about" class="py-20 bg-gray-800 px-6">
     <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-3xl font-semibold mb-6">About Me</h2>
-      <p class="text-gray-400">My name is Aditya Shukla, an aspiring software developer from India, learning Web-Development, DSA and have a keen interest in Competative Programming</p>
+      <p class="text-gray-400">My name is Aditya Shukla, an aspiring software developer from India, learning full stack-Development, DSA and have a keen interest in Competative Programming</p>
     </div>
   </section>
 
